@@ -15,3 +15,5 @@ New internal features:
 - members root folder is now a Members Workspace (CPS Proxy BTree Folder)
 - added Flash Animation widget to the Web Document
 - move byline in folder_contents according to #1290
+- updated isInWorkspace script to take into account also the new Members 
+  Workspace portal type
